# ai-notes-to-calendar

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
src/: calendar_api.py  config.py  parser.py  vision.py
